2015-02-11  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-arm.c: Add support for Cortex-A72.

2015-02-09  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/tc-arm.c (warn_deprecated_sp): Use as_tsktsk instead
	of as_warn for deprecation messages.
	(encode_arm_addr_mode_2): Likewise.
	(check_obsolete): Likewise.
	(do_rd_rm_rn): Likewise.
	(do_co_reg): Likewise.
	(do_setend): Likewise.
	(do_t_mov_cmp): Likewise.
	(do_neon_ldr_str): Likewise.
	(opcode_lookup): Likewise.
	(if_fsm_post_encode): Likewise.
	(md_assemble): Likewise.

2015-02-06  Jan Beulich  <jbeulich@suse.com>

	* dw2gencfi.c (select_cie_for_fde): Also bail on CFI_label.
	(cfi_change_reg_numbers): Also do nothing for CFI_label.
	(cfi_pseudo_table): Also handle .cfi_label when not supporting
	CFI directives.

2015-02-05  Alan Modra  <amodra@gmail.com>

	* config/tc-msp430.c (md_assemble): Correct size passed to
	extract_cmd.  Remove index check.

2015-02-04  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-aarch64.c (aarch64_cpus): Add support for Cortex-A72.
	* doc/c-aarch64.texi (-mcpu=): Add "cortex-a72".

2015-02-04  Nick Clifton  <nickc@redhat.com>

	* config/rl78-parse.y (addsubw): Fix encoding of [HL] variant of
	these instructions.

2015-02-03  Renlin Li  <renlin.li@arm.com>

	* doc/c-aarch64.texi (.arch): Document the directive.
	(.arch_extension): Likewise.

2015-02-03  Nick Clifton  <nickc@redhat.com>

	* config/tc-rl78.h (TC_PARSE_CONS_EXPRESSION): Define.

2015-01-28  James Bowman  <james.bowman@ftdichip.com>

	* Makefile.am: Add FT32 files.
	* config/tc-ft32.c: New file.
	* config/tc-ft32.h: New file.
	* configure.tgt: Add FT32 support.
	* Makefile.in: Regenerate.
	* po/POTFILES.in: Regenerate.

2015-01-27  Kuan-Lin Chen  <kuanlinchentw@gmail.com>

	* config/tc-nds32.c (do_pseudo_la_internal): Limit the second argument
	of instruction la to a symbol.

2015-01-27  Kuan-Lin Chen  <kuanlinchentw@gmail.com>

	* config/tc-nds32.c (nds32_parse_name): Ignore when the input is